--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,3 +65,48 @@
     </nav>
   </div>
 </header>
+<header class="navbar navbar-fixed-bottom navbar-inverse">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+      
+        <div class="col-md-3 mb-md-0 mb-3">
+          <!-- Links -->
+          <h5 class="text-uppercase">Contacts</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">tel1: 0782338270</a>
+            </li>
+            
+            <li>
+              <a href="#!">Email: cherifchervis@gmail.com</a>
+            </li>
+            <li>
+              <a href="#!">instagram: car_rental_app</a>
+            </li>
+          </ul>
+        </div>
+        <!-- Grid column -->
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+          <!-- Links -->
+          <h5 class="text-uppercase">Address</h5>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Kigali Rwanda</a>
+            </li>
+            <li>
+              <a href="#!">Kicukiro Nyanza</a>
+            </li>
+          </ul>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+    <!-- Footer Links -->
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+       car_rental app  &nbsp;&nbsp;&nbsp;&nbsp; All Right Reserved
+    </div>
+    <!-- Copyright -->
+  </header>
