--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,7 +9,7 @@ $gray-medium-light: #eaeaea;
 
 body {
   padding-top: 60px;
-  background-image: url("serge.jpg");
+  background-image: url("bobby.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
